--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -17,7 +17,7 @@
             </form>
             <div class="pt-3">
                 <small class="text-muted">
-                    Need and account ?
+                    Need an account?
                     <a href="{% url 'register' %}" class="ml-2">
                         Sign Up
                     </a>
