--- a/account/templates/account/logout.html
+++ b/account/templates/account/logout.html
@@ -2,24 +2,20 @@
 {% load crispy_forms_tags %}
 
 
-{% block title%}Register{% endblock title%}
+{% block title%}logout{% endblock title%}
 
 
 {% block content%}
 
     <div class="row">
         <div class="col-11 col-md-4 mx-auto mt-5">
-            <h3 class="mb-4">login</h3>
-            <form method="POST">
-                {% csrf_token %}
-                {{ form | crispy }}		
-                <button class="btn btn-secondary" type="submit"> Submit </button>
-            </form>
-            <div class="pt-3">
+            <h3 class="mb-4">You have been logged Out!</h3>
+           
+            <div class="border-top pt-3">
                 <small class="text-muted">
                     Need and account ?
-                    <a href="{% url 'register' %}" class="ml-2">
-                        Sign Up
+                    <a href="{% url 'login' %}" class="ml-2">
+                        Log in again!
                     </a>
                 </small>
             </div>
