--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -7,6 +7,7 @@
 
 {% block content%}
 
+
 <div class="row">
     <div class="col-md-4 col-11 mx-md-5 mx-2 mt-md-3 my-3">
         <a class="btn btn-outline-secondary" href="#" onclick="goBack()">Go back</a>
@@ -55,87 +56,45 @@
             {% endif %}
         {% else %}
             <a href="{% url 'login' %}" class="ml-2">
-                <button    class="btn btn-outline-primary">Login to like this page <ion-icon class="mx-1" name="heart-outline"></ion-icon></button>
+                <button    class="btn btn-outline-primary">Login to like and comment on this page <ion-icon class="mx-1" name="heart-outline"></ion-icon></button>
             </a>
             
         {% endif %}
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-12 mx-3 mx-md-auto mt-3">
-        <h4 class="mb-4">Comments</h4>
+    <div class="col-md-5 col-12 mx-3 mx-md-auto mt-3">
 
-            <form method="POST" novalidate>
-                {% csrf_token %}
-                <input type="text" name="comment" placeholder="Enter your comment here">
-                <input type="hidden" name="postsno">	
-                <input type="submit" value="Submit">	
-            </form>
+    {% for comment in comments %}
+    <div class="mt-2">
+        <strong>{{ comment.user.username }}</strong>: {{ comment.comment }} 
+        <span class="text-muted"> ~ {{ comment.timestamp|timesince }} ago</span>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-6 col-12 mx-3 mx-md-auto">
+    {% empty %}
+        <p>No comments yet.</p>
+    {% endfor %}
 
-        <div class="row">
-            <div class="col-md-2">
-                Image Section
+    {% if request.user.is_authenticated %}
+        <form class="my-4" method="post" action=".">
+        {% csrf_token %}
+        <div class="form-group">
+                <textarea class="form-control form-control-lg" name="{{ comment_form.comment.name }}" rows="4">{{ comment_form.comment.value|default:'' }}</textarea>
             </div>
-            <div class="col-md-10">
-                Comment Here
-            </div>
-        </div>
-        
-    </div>
+            <button class="btn btn-primary mt-1" type="submit">Post comment</button>
+        </form>
     
-</div>
-
-<div class="row">
-    <div class="col-md-6 col-12 mx-3 mx-md-auto">
-
-        <div class="row">
-            <div class="col-md-2">
-                Image Section
-            </div>
-            <div class="col-md-10">
-                Comment Here
-            </div>
-        </div>
-        
+    {% endif %}
     </div>
-    
-</div>
 
-<div class="row">
-    <div class="col-md-6 col-12 mx-3 mx-md-auto">
 
-        <div class="row">
-            <div class="col-md-2">
-                Image Section
-            </div>
-            <div class="col-md-10">
-                Comment Here
-            </div>
-        </div>
         
-    </div>
-    
+      </div>
+      
 </div>
 
-<div class="row">
-    <div class="col-md-6 col-12 mx-3 mx-md-auto">
 
-        <div class="row">
-            <div class="col-md-2">
-                Image Section
-            </div>
-            <div class="col-md-10">
-                Comment Here
-            </div>
-        </div>
-        
-    </div>
-    
-</div>
+
+
 
 
 {% endblock content %}
